code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_168.wast
(assert_malformed
  (module quote "(func (param i32) (result i32) (block (param $x i32)))")
  "unexpected token"
)